--- a/velomall/style/product.css
+++ b/velomall/style/product.css
@@ -6275,9 +6275,9 @@ button {
   transition: 0.3s;
 }
 .green-gradient:hover {
-  background: #ffc600;
-  background: linear-gradient(to bottom, #ffc600 0%, #eb5700 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ffc600", endColorstr="#eb5700",GradientType=0 );
+  background: #52b152;
+  background: linear-gradient(to bottom, #52b152 0%, #008a00 50%, #005700 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#52b152", endColorstr="#005700",GradientType=0 );
 }
 
 .white-gradient {
@@ -6300,13 +6300,26 @@ button {
 .color-red > i {
   color: white;
 }
+.color-red > label > i {
+  display: none;
+}
 
 .color-blue {
   background-color: #05b6d4;
 }
+.color-blue > label > i {
+  display: none;
+}
 
 .color-black {
   background-color: #000000;
+}
+.color-black > i {
+  color: white;
+}
+.color-black > label > i {
+  display: none;
+  color: white;
 }
 
 .color-white {
@@ -6314,6 +6327,38 @@ button {
 }
 .color-white > i {
   color: grey;
+}
+.color-white > label > i {
+  display: none;
+}
+
+.color-green {
+  background-color: green;
+}
+.color-green > i {
+  color: white;
+}
+.color-green > label > i {
+  display: none;
+  color: white;
+}
+
+.color-yellow {
+  background-color: yellow;
+}
+.color-yellow > label > i {
+  display: none;
+}
+
+.color-brown {
+  background-color: brown;
+}
+.color-brown > i {
+  color: white;
+}
+.color-brown > label > i {
+  display: none;
+  color: white;
 }
 
 .header {
@@ -6855,7 +6900,6 @@ button {
 .item > .card > .images > .big-image > .sale {
   height: 80px;
   width: 70px;
-  background-color: rgba(100, 100, 100, 0.5);
   cursor: pointer;
   position: absolute;
   top: 0;
@@ -7107,6 +7151,24 @@ button {
   font-family: "Museo Sans Cyrl 300";
   font-size: 1em;
 }
+.item > .opportunity > .card > .icon-bike {
+  background-image: url("../image/icon/bike.svg");
+}
+.item > .opportunity > .card > .icon-wrench {
+  background-image: url("../image/icon/wrench.svg");
+}
+.item > .opportunity > .card > .icon-oil {
+  background-image: url("../image/icon/oil.svg");
+}
+.item > .opportunity > .card > .icon-map {
+  background-image: url("../image/icon/map.svg");
+}
+.item > .opportunity > .card > .icon-call-center {
+  background-image: url("../image/icon/call-center.svg");
+}
+.item > .opportunity > .card > .icon-money {
+  background-image: url("../image/icon/money.svg");
+}
 
 .specifications {
   height: 55px;
@@ -7286,7 +7348,7 @@ button {
   height: auto;
   width: 100%;
   max-width: 265px;
-  padding: 10px 0 10px 0;
+  padding: 0 0 10px 0;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -7308,39 +7370,70 @@ button {
   width: 100%;
   background-color: white;
 }
-.search-accessories > .cards-list > .card > .image-contain > .hover {
+.search-accessories > .cards-list > .card > .image-contain > .sale {
+  height: 50px;
+  min-width: 50px;
+  cursor: pointer;
   position: absolute;
-  top: 20px;
-  left: 0;
+  top: 0;
+  left: 5%;
   display: flex;
-  justify-content: space-between;
-  height: 35px;
-  width: 100%;
-}
-.search-accessories > .cards-list > .card > .image-contain > .hover > .left {
-  width: 70px;
-  background: #00c0ff;
-  background: linear-gradient(to bottom, #00c0ff 0%, #007fc5 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00c0ff", endColorstr="#007fc5",GradientType=0 );
-  display: flex;
-  align-items: center;
   justify-content: center;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+}
+.search-accessories > .cards-list > .card > .image-contain > .sale > div {
+  height: 95%;
+  width: calc(100% - 2px);
+  background-color: yellow;
   color: white;
   font-family: "Museo Sans Cyrl 700";
   font-size: 1em;
-  -webkit-clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
-  clip-path: polygon(0% 0%, 100% 0, 90% 50%, 100% 100%, 0% 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 90%, 0 100%);
 }
-.search-accessories > .cards-list > .card > .image-contain > .hover > .right {
+.search-accessories > .cards-list > .card > .image-contain > .right {
+  position: absolute;
+  top: 20px;
+  right: 0;
   display: flex;
   justify-content: flex-end;
   padding: 0 10px 0 0;
 }
-.search-accessories > .cards-list > .card > .image-contain > .hover > .right > .image-contain {
-  height: 100%;
+.search-accessories > .cards-list > .card > .image-contain > .right > .image-contain {
+  height: 25px;
+  min-height: 25px;
   width: 25px;
+  min-width: 25px;
   margin: 0 5px 0 5px;
   cursor: pointer;
+}
+.search-accessories > .cards-list > .card > .image-contain > .right > .icon-compare {
+  background-image: url("../image/icon/compare-grey.svg");
+}
+.search-accessories > .cards-list > .card > .image-contain > .right > .icon-compare:hover {
+  background-image: url("../image/icon/compare.svg");
+}
+.search-accessories > .cards-list > .card > .image-contain > .right > .icon-compare-active {
+  background-image: url("../image/icon/compare.svg");
+}
+.search-accessories > .cards-list > .card > .image-contain > .right > .icon-compare-active:hover {
+  background-image: url("../image/icon/compare.svg");
+}
+.search-accessories > .cards-list > .card > .image-contain > .right > .icon-heart {
+  background-image: url("../image/icon/heart-grey.svg");
+}
+.search-accessories > .cards-list > .card > .image-contain > .right > .icon-heart:hover {
+  background-image: url("../image/icon/heart-fill.svg");
+}
+.search-accessories > .cards-list > .card > .image-contain > .right > .icon-heart-active {
+  background-image: url("../image/icon/heart.svg");
+}
+.search-accessories > .cards-list > .card > .image-contain > .right > .icon-heart-active:hover {
+  background-image: url("../image/icon/heart-fill.svg");
 }
 .search-accessories > .cards-list > .card > .info {
   width: 100%;
