--- a/velomall/style/scss/_products.scss
+++ b/velomall/style/scss/_products.scss
@@ -188,6 +188,9 @@
                   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
                   box-shadow: inset 0 0 0px 1px rgb(0,192,255);
                 }
+                > input[type=checkbox]:checked ~.color > label > i {
+                  display: flex;
+                }
                 > .text {
                   padding: 0 0 0 20px;
                   width: 100%;
@@ -199,7 +202,7 @@
                   width: 25px;
                   min-width: 25px;
                   border: 1px solid grey;
-                  border-radius: 3px;
+                  border-radius: 50%;
                   cursor: pointer;
                   margin: 0 0 0 20px;
                   > label {
@@ -207,12 +210,38 @@
                     width: 100%;
                     display: flex;
                     border: 6px solid white;
+                    border-radius: 50%;
                     background-color: white;
                     cursor: pointer;
                     box-shadow: inset 0 0 0px 1px grey;
                     &:hover {
                       box-shadow: inset 0 0 0px 1px rgb(0,192,255);
                     }
+                  }
+                }
+                > .color {
+                  height: 25px;
+                  min-height: 25px;
+                  width: 25px;
+                  min-width: 25px;
+                  border: 1px solid grey;
+                  border-radius: 50%;
+                  cursor: pointer;
+                  margin: 0 0 0 20px;
+                  transition: $transition;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  &:hover {
+                    transform: scale(1.2);
+                  }
+                  > label {
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    cursor: pointer;
                   }
                 }
               }
@@ -325,6 +354,22 @@
               > .icon-brakes {
                 background-image: url('../image/icon/brakes.svg');
               }
+              > .icon-cables {
+                background-image: url('../image/icon/cables.svg');
+              }
+              > .icon-chains {
+                background-image: url('../image/icon/chains.svg');
+              }
+              > .icon-rods {
+                background-image: url('../image/icon/rods.svg');
+              }
+              > .icon-seatpost-pin {
+                background-image: url('../image/icon/seatpost-pin.svg');
+              }
+              > .icon-other-parts {
+                background-image: url('../image/icon/other-parts.svg');
+                transform: rotateY(180deg);
+              }
             }
           }
         }
@@ -354,7 +399,7 @@
             width: 25px;
             min-width: 25px;
             border: 1px solid grey;
-            border-radius: 3px;
+            border-radius: 50%;
             cursor: pointer;
             margin: 0 0 0 20px;
             > label {
@@ -362,6 +407,7 @@
               width: 100%;
               display: flex;
               border: 6px solid white;
+              border-radius: 50%;
               background-color: white;
               cursor: pointer;
               box-shadow: inset 0 0 0px 1px grey;
@@ -565,8 +611,18 @@
           font-family: $f300;
           font-size: 1em;
           margin: 10px 10px 0 0;
-
           cursor: pointer;
+          transition: $transition;
+          &:hover {
+            border: 2px solid white;
+            color: white;
+            font-family: $f300;
+            font-size: 1em;
+            background: rgb(0,192,255);
+            background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+            transform: scale(1.1);
+          }
         }
         > .active {
           border: none;
@@ -668,7 +724,7 @@
             width: 25px;
             min-width: 25px;
             border: 1px solid grey;
-            border-radius: 3px;
+            border-radius: 50%;
             cursor: pointer;
             margin: 0 0 0 20px;
             > label {
@@ -676,6 +732,7 @@
               width: 100%;
               display: flex;
               border: 6px solid white;
+              border-radius: 50%;
               background-color: white;
               cursor: pointer;
               box-shadow: inset 0 0 0px 1px grey;
@@ -704,6 +761,7 @@
           border-radius: 5px;
           z-index: 5;
           background-color: white;
+          overflow: hidden;
           &:hover {
             transform: scale(1.05);
           }
@@ -853,6 +911,20 @@
                 margin: 5px 0 5px 0;
                 transition: $transition;
               }
+              > a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 50px;
+                min-height: 50px;
+                width: 100%;
+                border-radius: 25px;
+                font-family: $f700;
+                font-size: 1em;
+                text-transform: uppercase;
+                margin: 5px 0 5px 0;
+                transition: $transition;
+              }
             }
           }
         }
@@ -939,7 +1011,7 @@
               > .sale {
                 height: 50px;
                 min-width: 50px;
-                background-color: rgba(100,100,100,0.5);
+                // background-color: rgba(100,100,100,0.5);
                 cursor: pointer;
                 position: absolute;
                 top: 0;
